[tool.poetry]
name = "comx-api"
version = "0.1.0"
description = ""
authors = ["mos4ic <mosaicxorg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
communex = "^0.1.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
