[tool.poetry]
name = "comx-python-api"
version = "0.1.0"
description = ""
authors = ["mos4ic <mosaicxorg@gmail.com>"]
readme = "README.md"
packages = [{include = "app.py"}]

[tool.poetry.dependencies]
python = "^3.10.14"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
communex = "^0.1.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
